# neno-serpent

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  justfile  pyproject.toml
.github/workflows/: bot-ci.yml  cmake.yml
android/res/drawable/: ic_launcher_background.xml  ic_launcher_background_round.xml  ic_launcher_foreground_round.xml  ic_launcher_monochrome.xml
android/res/mipmap-anydpi-v26/: ic_launcher_round.xml
cmake/: qt_optional_components.cmake  resources.cmake
docs/: BOT_ML_VALIDATION.md  BOT_RULES.md  BOT_TRAINING.md  COVERAGE_BASELINE.json  COVERAGE_POLICY.md  MODERNIZATION_ROADMAP.md  PROJECT_ARCHITECTURE.md  RETRO_CONSOLE_PLAN.md  SCRIPT_AUTOMATION.md  UI_DEBUG_INJECTION.md
scripts/: README.md  deploy.sh  dev.sh  input.sh  ui.sh
scripts/ci/: bot_benchmark_gate.sh  bot_e2e_regression.sh  bot_leaderboard_regression.py  bot_leaderboard_regression.sh  bot_leaderboard_suite.tsv  bot_ml_smoke_gate.sh  coverage_collect.sh  coverage_gate.py  run_gh_sim.sh
scripts/ci/assets/: bot_ml_smoke.runtime.json
scripts/deploy/: android.sh  wasm.sh
scripts/dev/: android_icons.sh  bot_benchmark.sh  bot_choice_dataset.sh  bot_choice_eval.py  bot_choice_eval.sh  bot_dataset.sh  bot_eval.py  bot_eval.sh  bot_ml_gate.sh  bot_ml_online_gate.sh  bot_online_run.sh  bot_online_run_smoke.sh  bot_online_train.sh  bot_online_train_loop.py  bot_power_dataset.sh  bot_power_eval.py  bot_power_eval.sh  bot_run.sh  bot_train.py  bot_train.sh  bot_tune.py  bot_tune.sh  cache_prune.sh
scripts/input/: inject.sh
scripts/input/probes/: konami_hypr_real.sh  konami_stability.sh
scripts/input/semantics/: matrix_wayland.sh  smoke.sh
scripts/lib/: input_matrix_common.sh  ui_nav_runtime.sh  ui_window_common.sh
scripts/ui/: self_check.sh
scripts/ui/nav/: capture.sh  debug.sh
scripts/ui/palette/: debug_matrix.sh  focus.sh  matrix.sh  review.sh  single.sh
src/: CMakeLists.txt  game_engine_interface.h  main.cpp  power_up_id.h
src/adapter/: board.cpp  choices.cpp  engine.cpp  engine.h  engine_adapter.cpp  engine_adapter.h  lifecycle.cpp  persistence.cpp  simulation.cpp  tick.cpp  tick_driver.cpp  view.cpp
src/adapter/bot/: applier.cpp  backend.cpp  backend.h  config.cpp  config.h  config_loader.cpp  config_loader.h  controller.cpp  controller.h  decision_applier.cpp  decision_applier.h  facade.cpp  facade.h  features.cpp  loader.cpp  loader.h  ml_backend.cpp  ml_backend.h  orchestrator.cpp  orchestrator.h  port.h  route_telemetry.cpp  runtime.cpp  runtime.h  runtime_facade.cpp  snapshot.cpp  snapshot.h  snapshot_builder.cpp  state.cpp  state.h  strategy_profiles.json  telemetry.cpp  telemetry.h
src/adapter/input/: router.cpp
src/adapter/level/: flow.cpp
src/adapter/models/: library.cpp
src/adapter/session/: runtime.cpp
src/adapter/ui/: action.cpp  action.h  controller.cpp  controller.h
src/adapter/view_models/: audio.cpp  render.cpp  render.h  selection.cpp  status.cpp  theme.cpp
src/core/buff/: runtime.cpp  runtime.h
src/core/choice/: runtime.cpp
src/core/game/: rules.cpp
src/core/session/: core.cpp  core.h  runtime.cpp  runtime.h  state.h
src/fsm/: states.cpp
src/qml/: BotDebugPanel.qml  IconLabLayer.qml  LevelUpModal.qml  LibraryLayer.qml  MedalRoom.qml  MedalRoomCard.qml  ModalChoiceCard.qml  OverlayLayer.qml  PowerMeta.js  ScreenView.qml  StaticDebugLayer.qml  UiActionRouter.qml  UiCompositionHost.qml  UiDebugController.qml  UiInputController.qml  UiRuntimeState.qml  WorldLayer.qml  main.qml
src/qml/components/: RetroWindowList.qml  SectionHeader.qml
src/tools/: bot_benchmark.cpp
tests/: CMakeLists.txt  test_bot_backend_adapter.cpp  test_bot_config_adapter.cpp  test_bot_ml_backend_adapter.cpp  test_bot_runtime_adapter.cpp  test_engine_adapter.cpp  test_ui_action_dispatch_adapter.cpp
tests/adapter/audio/: test_audio_settings_view_model.cpp
tests/adapter/bot/: test_bot_applier_adapter.cpp  test_bot_backend_adapter.cpp  test_bot_config_adapter.cpp  test_bot_config_loader_adapter.cpp  test_bot_controller_adapter.cpp  test_bot_decision_applier_adapter.cpp  test_bot_facade_adapter.cpp  test_bot_features_adapter.cpp  test_bot_loader_adapter.cpp  test_bot_ml_backend_adapter.cpp  test_bot_orchestrator_adapter.cpp  test_bot_route_telemetry_adapter.cpp  test_bot_runtime_adapter.cpp  test_bot_runtime_facade_adapter.cpp  test_bot_snapshot_adapter.cpp  test_bot_snapshot_builder_adapter.cpp  test_bot_state_adapter.cpp  test_bot_telemetry_adapter.cpp
tests/adapter/level/: test_level_applier_adapter.cpp  test_level_loader_adapter.cpp  test_level_script_runtime_adapter.cpp
tests/adapter/session/: test_engine_adapter.cpp  test_ghost_store_adapter.cpp  test_session_render_view_model.cpp  test_session_state_adapter.cpp  test_session_status_view_model.cpp
tests/adapter/ui/: test_choice_models_adapter.cpp  test_input_semantics_adapter.cpp  test_library_models_adapter.cpp  test_selection_view_model.cpp  test_theme_view_model.cpp  test_ui_action_parser.cpp  test_ui_command_controller.cpp
tests/core/: test_core_rules.cpp  test_session_core.cpp  test_session_runner.cpp
tests/services/: test_audio_bus_service.cpp  test_level_repository_service.cpp
tools/: CMakeLists.txt
